<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_title_name">Playlist maker</string>
    <string name="media">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_url">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">anton.edlenko@yandex.ru</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="internet_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="no_music_on_server">Песня отсутсвует на сервере</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_were_looking_for">Вы искали</string>

    <string name="mockup_audio_player_time">0:00</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>

    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_playlists">Вы не создали ни одного плейлиста</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="name_">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>

    <string name="end_playlist_creation_">Завершить создание плейлиста?</string>
    <string name="all_unsaved_picks_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist">Плейлист</string>
    <string name="created_">создан.</string>
    <string name="saved_">сохранен.</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="no_tracks_in_playlist">В плейлисте еще нет ни одного трека</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист</string>
    <string name="want_to_delete_track_">Хотите удалить трек?</string>
    <string name="want_to_delete_playlist_">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <plurals name="plurals_track">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="plurals_minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <string name="no_tracks_for_share">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>

</resources>