<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/menu_title_margin"
        android:layout_marginTop="@dimen/menu_title_margin"
        android:fontFamily="@font/ys_display"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/normal_text_size" />


    <Button
        android:id="@+id/search_btn"
        style="@style/menu_bnt_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/menu_btn_margin_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/search"
        app:cornerRadius="@dimen/menu_btn_corner_radius"
        app:icon="@drawable/search_icon_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/menu_btn_icon_padding"
        app:iconTint="@color/yp_black">

    </Button>

    <Button
        android:id="@+id/media_btn"
        style="@style/menu_bnt_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/menu_btn_margin_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/media"
        app:cornerRadius="@dimen/menu_btn_corner_radius"
        app:icon="@drawable/media_icon_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/menu_btn_icon_padding"
        app:iconTint="@color/yp_black">

    </Button>

    <Button
        android:id="@+id/settings_btn"
        style="@style/menu_bnt_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/menu_btn_margin_horizontal"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:cornerRadius="@dimen/menu_btn_corner_radius"
        app:icon="@drawable/settings_icon_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/menu_btn_icon_padding"
        app:iconTint="@color/yp_black">

    </Button>


</LinearLayout>