<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:background="@color/yp_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp">

            <ImageView
                android:id="@+id/back_arrow_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow_24"
                android:layout_gravity="center"
                android:padding="12dp"/>


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/settings"
            android:textColor="@color/yp_black"
            android:fontFamily="@font/ys_display"
            android:layout_marginStart="12dp"/>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_menu_layout_height"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:textSize="@dimen/little_text_size"
                android:textColor="@color/yp_black"
                android:layout_gravity="start|center"
                android:layout_marginStart="16dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="6dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_menu_layout_height"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_app"
                android:textSize="@dimen/little_text_size"
                android:textColor="@color/yp_black"
                android:layout_gravity="start|center"
                android:layout_marginStart="16dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="12dp"
                android:src="@drawable/share_app_24"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_menu_layout_height"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_to_support"
                android:textSize="@dimen/little_text_size"
                android:textColor="@color/yp_black"
                android:layout_gravity="start|center"
                android:layout_marginStart="16dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="12dp"
                android:src="@drawable/write_to_support_24"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_menu_layout_height"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_agreement"
                android:textSize="@dimen/little_text_size"
                android:textColor="@color/yp_black"
                android:layout_gravity="start|center"
                android:layout_marginStart="16dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="12dp"
                android:src="@drawable/arrow_forward_24"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>