<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playlist_bottom_sheet_top_shape"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="450dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/bottom_sheet_top_line_shape" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/transparent"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/iv_playlist_bottom_sheet"
                tools:src="@drawable/track_placeholder"
                android:layout_width="45dp"
                android:layout_height="45dp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/views_between_distance"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_playlist_name_bottom_sheet"
                style="@style/search_track_name_style"
                tools:text="Best songs 2021"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_tracks_count_bottom_sheet"
                style="@style/search_track_author_style"
                tools:text="98 треков"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="@dimen/track_author_max_length" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_share"
        style="@style/normal_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        android:text="@string/share" />

    <TextView
        android:id="@+id/tv_edit_info"
        style="@style/normal_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        android:text="@string/edit_info" />

    <TextView
        android:id="@+id/tv_delete_playlist"
        style="@style/normal_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="50dp"
        android:paddingVertical="24dp"
        android:text="@string/delete_playlist" />

</LinearLayout>