<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.audioplayer.AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_specs_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.045" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_specs_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.955" />

    <ImageView
        android:id="@+id/iv_back_arrow_btn"
        style="@style/back_arrow_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/audio_player_back_arrow_padding"
        android:src="@drawable/back_arrow_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/artworkUrl100"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_top"
        android:src="@drawable/big_trackplaceholder"
        app:layout_constraintBottom_toTopOf="@+id/name_tv"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/iv_back_arrow_btn" />

    <TextView
        android:id="@+id/name_tv"
        style="@style/title_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/author_tv"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        tools:text="Название трека" />

    <TextView
        android:id="@+id/author_tv"
        style="@style/little_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        tools:text="Имя автора" />

    <ImageButton
        android:id="@+id/playlistButton"
        android:layout_width="@dimen/audio_little_button"
        android:layout_height="@dimen/audio_little_button"
        android:layout_marginBottom="54dp"
        android:background="@drawable/audio_player_circle_button_shape"
        android:src="@drawable/audio_player_playlist_button"
        app:layout_constraintBottom_toTopOf="@+id/track_time_tv"
        app:layout_constraintEnd_toStartOf="@id/playButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_guideline" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="@dimen/audio_big_button"
        android:layout_height="@dimen/audio_big_button"
        android:layout_marginTop="-24dp"
        android:background="@drawable/audio_player_circle_button_shape"
        android:src="@drawable/audio_player_play_button"
        app:layout_constraintEnd_toStartOf="@id/likeButton"
        app:layout_constraintStart_toEndOf="@id/playlistButton"
        app:layout_constraintTop_toTopOf="@id/playlistButton" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="@dimen/audio_little_button"
        android:layout_height="@dimen/audio_little_button"
        android:background="@drawable/audio_player_circle_button_shape"
        android:src="@drawable/audio_player_like_button"
        app:layout_constraintBottom_toBottomOf="@id/playlistButton"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/playButton" />

    <TextView
        android:id="@+id/current_time_tv"
        style="@style/little_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/mockup_audio_player_time"
        app:layout_constraintEnd_toEndOf="@id/playButton"
        app:layout_constraintStart_toStartOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <TextView
        android:id="@+id/track_time_tv"
        style="@style/audio_info_text_style_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_horizontal"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@+id/album_tv"
        app:layout_constraintStart_toStartOf="@id/left_specs_guideline" />

    <TextView
        android:id="@+id/track_time_value_tv"
        style="@style/audio_info_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/right_specs_guideline"
        app:layout_constraintStart_toEndOf="@id/track_time_tv"
        app:layout_constraintTop_toTopOf="@id/track_time_tv"
        tools:text="0:00" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/album_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="album_tv,album_value_tv" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/year_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="year_tv,year_value_tv" />

    <TextView
        android:id="@+id/album_tv"
        style="@style/audio_info_text_style_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_horizontal"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@+id/year_tv"
        app:layout_constraintStart_toStartOf="@id/left_specs_guideline" />

    <TextView
        android:id="@+id/album_value_tv"
        style="@style/audio_info_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/right_specs_guideline"
        app:layout_constraintStart_toEndOf="@id/album_tv"
        app:layout_constraintTop_toTopOf="@id/album_tv"
        tools:text="Имя альбома" />

    <TextView
        android:id="@+id/year_tv"
        style="@style/audio_info_text_style_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_horizontal"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@+id/genre_tv"
        app:layout_constraintStart_toStartOf="@id/left_specs_guideline" />

    <TextView
        android:id="@+id/year_value_tv"
        style="@style/audio_info_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/right_specs_guideline"
        app:layout_constraintStart_toEndOf="@id/year_tv"
        app:layout_constraintTop_toTopOf="@id/year_tv"
        tools:text="1970" />

    <TextView
        android:id="@+id/genre_tv"
        style="@style/audio_info_text_style_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_horizontal"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@+id/country_tv"
        app:layout_constraintStart_toStartOf="@id/left_specs_guideline" />

    <TextView
        android:id="@+id/genre_value_tv"
        style="@style/audio_info_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/right_specs_guideline"
        app:layout_constraintStart_toEndOf="@id/genre_tv"
        app:layout_constraintTop_toTopOf="@id/genre_tv"
        tools:text="Рэп" />

    <TextView
        android:id="@+id/country_tv"
        style="@style/audio_info_text_style_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_horizontal"
        android:layout_marginBottom="@dimen/margin_top"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_specs_guideline" />

    <TextView
        android:id="@+id/country_value_tv"
        style="@style/audio_info_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/right_specs_guideline"
        app:layout_constraintStart_toEndOf="@id/country_tv"
        app:layout_constraintTop_toTopOf="@id/country_tv"
        tools:text="Россия" />


</androidx.constraintlayout.widget.ConstraintLayout>